Fix issue on Leaflet not showing on page 3

--- a/static/style.css
+++ b/static/style.css
@@ -1,17 +1,22 @@
 /* Remove the default margin and padding from the body. */
 body {
-    padding: 0;
-    margin: 0;
-  }
-  
-  /* Set map, body, and html to 100% of the screen size. */
-  #leaflet,
-  body,
-  html {
-    height: 100%;
-  }
-  
-  h1 {
-    text-align: center;
-  }
-  
+  padding: 0;
+  margin: 0;
+}
+
+/* Set map, body, and html to 100% of the screen size. */
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+
+h1 {
+  text-align: center;
+}
+
+#leaflet {
+  position: relative;
+  height: 400px;
+  width: 100%;
+}
